{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 128,
  "lineage": "ae582e34-19d7-5d09-9002-22a9fbfbff36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:loadbalancer/app/arcjupyter-demo/88d3628f71d88adc",
            "arn_suffix": "app/arcjupyter-demo/88d3628f71d88adc",
            "dns_name": "arcjupyter-demo-1262578459.ap-southeast-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:loadbalancer/app/arcjupyter-demo/88d3628f71d88adc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "arcjupyter-demo",
            "security_groups": [
              "sg-066fa04511ced5f8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03824a7c30f470d6d"
              },
              {
                "subnet_id": "subnet-06db789ec678212a2"
              },
              {
                "subnet_id": "subnet-0f0b5a0b9f89421bd"
              }
            ],
            "subnets": [
              "subnet-03824a7c30f470d6d",
              "subnet-06db789ec678212a2",
              "subnet-0f0b5a0b9f89421bd"
            ],
            "vpc_id": "vpc-09c98113fec684931",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "depends_on": [
            "aws_security_group.lb",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "spark",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:listener/app/arcjupyter-demo/88d3628f71d88adc/0b4a0a4b76444be5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:targetgroup/spark-target-group/de93945bb2d20cc8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:listener/app/arcjupyter-demo/88d3628f71d88adc/0b4a0a4b76444be5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:loadbalancer/app/arcjupyter-demo/88d3628f71d88adc",
            "port": 4040,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.spark"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:listener/app/arcjupyter-demo/88d3628f71d88adc/a6481735cd9f9aad",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:targetgroup/jupyter-target-group/4be6390b8153ce1f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:listener/app/arcjupyter-demo/88d3628f71d88adc/a6481735cd9f9aad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:loadbalancer/app/arcjupyter-demo/88d3628f71d88adc",
            "port": 8888,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "spark",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:targetgroup/spark-target-group/de93945bb2d20cc8",
            "arn_suffix": "targetgroup/spark-target-group/de93945bb2d20cc8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:targetgroup/spark-target-group/de93945bb2d20cc8",
            "lambda_multi_value_headers_enabled": false,
            "name": "spark-target-group",
            "port": 4040,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_alb_listener.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:targetgroup/jupyter-target-group/4be6390b8153ce1f",
            "arn_suffix": "targetgroup/jupyter-target-group/4be6390b8153ce1f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:720560070661:targetgroup/jupyter-target-group/4be6390b8153ce1f",
            "lambda_multi_value_headers_enabled": false,
            "name": "jupyter-target-group",
            "port": 8888,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-47a53dbb",
            "domain": "vpc",
            "id": "eipalloc-053ea822c2bb0e001",
            "network_interface": "eni-070690d909218e5a4",
            "private_dns": "ip-172-17-3-154.ap-southeast-2.compute.internal",
            "private_ip": "172.17.3.154",
            "public_dns": "ec2-13-239-165-60.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.239.165.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "arc_eip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-9301b55e",
            "domain": "vpc",
            "id": "eipalloc-045b3dd64bdaa449c",
            "network_interface": "eni-03236075129f23fa3",
            "private_dns": "ip-172-17-4-209.ap-southeast-2.compute.internal",
            "private_ip": "172.17.4.209",
            "public_dns": "ec2-52-62-213-90.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.213.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "arc_eip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-94618e4e",
            "domain": "vpc",
            "id": "eipalloc-00f28e846a05d1ceb",
            "network_interface": "eni-002012fb5e699092c",
            "private_dns": "ip-172-17-5-77.ap-southeast-2.compute.internal",
            "private_ip": "172.17.5.77",
            "public_dns": "ec2-13-210-238-238.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.210.238.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "arc_eip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-024547c7a66a63cb7",
            "owner_id": "720560070661",
            "tags": {
              "Name": "arc_igw"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053ea822c2bb0e001",
            "id": "nat-04bc2fbc2481670cc",
            "network_interface_id": "eni-070690d909218e5a4",
            "private_ip": "172.17.3.154",
            "public_ip": "13.239.165.60",
            "subnet_id": "subnet-03824a7c30f470d6d",
            "tags": {
              "Name": "arc_nat.0"
            }
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045b3dd64bdaa449c",
            "id": "nat-08df1685f3dfc5927",
            "network_interface_id": "eni-03236075129f23fa3",
            "private_ip": "172.17.4.209",
            "public_ip": "52.62.213.90",
            "subnet_id": "subnet-0f0b5a0b9f89421bd",
            "tags": {
              "Name": "arc_nat.1"
            }
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f28e846a05d1ceb",
            "id": "nat-0c61224166b30958f",
            "network_interface_id": "eni-002012fb5e699092c",
            "private_ip": "172.17.5.77",
            "public_ip": "13.210.238.238",
            "subnet_id": "subnet-06db789ec678212a2",
            "tags": {
              "Name": "arc_nat.2"
            }
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024547c7a66a63cb7",
            "id": "r-rtb-00866ef4f7fc2990c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00866ef4f7fc2990c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b7f85c95eaf92b50",
            "owner_id": "720560070661",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-04bc2fbc2481670cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "arc_private_rtbl.0"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-077cbd264a345e768",
            "owner_id": "720560070661",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08df1685f3dfc5927",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "arc_private_rtbl.1"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-011b75b09ccc351c6",
            "owner_id": "720560070661",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0c61224166b30958f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "arc_private_rtbl.2"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054978a920357be7d",
            "route_table_id": "rtb-0b7f85c95eaf92b50",
            "subnet_id": "subnet-0b88be713bf484c60"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03989a1b0f189aff5",
            "route_table_id": "rtb-077cbd264a345e768",
            "subnet_id": "subnet-0c429815323ec19be"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0714568780697045e",
            "route_table_id": "rtb-011b75b09ccc351c6",
            "subnet_id": "subnet-02200b2d9b79cbd62"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:security-group/sg-05f083a40e160c18f",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f083a40e160c18f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4040,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-066fa04511ced5f8c"
                ],
                "self": false,
                "to_port": 4040
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-066fa04511ced5f8c"
                ],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "arc-ecs-tasks-security-group",
            "name_prefix": null,
            "owner_id": "720560070661",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arc-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:security-group/sg-066fa04511ced5f8c",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066fa04511ced5f8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4040,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4040
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "arc-load-balancer-security-group",
            "name_prefix": null,
            "owner_id": "720560070661",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arc-load-balancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:subnet/subnet-0b88be713bf484c60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0b88be713bf484c60",
            "map_public_ip_on_launch": false,
            "owner_id": "720560070661",
            "tags": {
              "Name": "arc_private_subnet.0"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:subnet/subnet-0c429815323ec19be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-0c429815323ec19be",
            "map_public_ip_on_launch": false,
            "owner_id": "720560070661",
            "tags": {
              "Name": "arc_private_subnet.1"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:subnet/subnet-02200b2d9b79cbd62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-02200b2d9b79cbd62",
            "map_public_ip_on_launch": false,
            "owner_id": "720560070661",
            "tags": {
              "Name": "arc_private_subnet.2"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:subnet/subnet-03824a7c30f470d6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-03824a7c30f470d6d",
            "map_public_ip_on_launch": true,
            "owner_id": "720560070661",
            "tags": {
              "Name": "arc_pub_subnet.0"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:subnet/subnet-0f0b5a0b9f89421bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.17.4.0/24",
            "id": "subnet-0f0b5a0b9f89421bd",
            "map_public_ip_on_launch": true,
            "owner_id": "720560070661",
            "tags": {
              "Name": "arc_pub_subnet.1"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:subnet/subnet-06db789ec678212a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.17.5.0/24",
            "id": "subnet-06db789ec678212a2",
            "map_public_ip_on_launch": true,
            "owner_id": "720560070661",
            "tags": {
              "Name": "arc_pub_subnet.2"
            },
            "vpc_id": "vpc-09c98113fec684931"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720560070661:vpc/vpc-09c98113fec684931",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0939f5e41a12f7311",
            "default_route_table_id": "rtb-00866ef4f7fc2990c",
            "default_security_group_id": "sg-0ba1395d66c479ce1",
            "dhcp_options_id": "dopt-674e0100",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09c98113fec684931",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00866ef4f7fc2990c",
            "owner_id": "720560070661",
            "tags": {
              "Name": "arc_vpc"
            }
          }
        }
      ]
    }
  ]
}